--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -20,10 +20,23 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@veramo/core": "^6.0.0",
+    "@veramo/credential-w3c": "^6.0.0",
+    "@veramo/data-store": "^6.0.0",
+    "@veramo/did-manager": "^6.0.0",
+    "@veramo/did-provider-ethr": "^6.0.0",
+    "@veramo/did-resolver": "^6.0.0",
+    "@veramo/key-manager": "^6.0.0",
+    "@veramo/kms-local": "^6.0.0",
     "did-jwt": "^8.0.8",
     "did-jwt-vc": "^4.0.6",
+    "dotenv": "^16.4.7",
     "ethereal": "^3.5.5",
     "ethers": "^6.13.5",
-    "expresss": "^0.0.0"
+    "ethr-did-resolver": "^11.0.3",
+    "expresss": "^0.0.0",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "web-did-resolver": "^2.0.29"
   }
 }
