--- a/issuer/backend/package.json
+++ b/issuer/backend/package.json
@@ -11,9 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ethersproject/providers": "^5.8.0",
     "cors": "^2.8.5",
+    "did-jwt": "^8.0.8",
+    "did-jwt-vc": "^4.0.6",
+    "did-resolver": "^4.1.0",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
+    "ethr-did": "^3.0.25",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
