--- a/snap/package.json
+++ b/snap/package.json
@@ -56,5 +56,12 @@
       "@lavamoat/preinstall-always-fail": false,
       "sharp": true
     }
+  },
+  "dependencies": {
+    "@metamask/keyring-api": "^17.2.1",
+    "did-jwt-vc": "^4.0.7",
+    "dotenv": "^16.4.7",
+    "ethers": "^6.13.5",
+    "ethr-did": "^3.0.26"
   }
 }
