--- a/snap/packages/snap/snap.manifest.json
+++ b/snap/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "ijpsnNI3VbAlYRcVq8cWcHH3BLHadOfGPoGk0HaZjMY=",
+    "shasum": "lw0sXTX1EcWi4kOONYs1sBAfx6xdwHIGoGDNC7uJ0+A=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -18,6 +18,7 @@
   },
   "initialPermissions": {
     "snap_dialog": {},
+    "snap_manageState": {},
     "endowment:rpc": {
       "dapps": true,
       "snaps": false
