created frontend apps. DMV app is currently polished and ready for backend integration. bank app still needs work.

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,25 @@ node_modules/
 .yarn/install-state.gz
 .pnp.*
 
+# dependencies
+/node_modules
+
+# next.js
+/.next/
+/.swc/
+
+# env files
+.env
+.env.*
+!.env.example
+
+# misc
+.DS_Store
+*.log
+
+# testing
+/coverage
+
 .vscode
 yarn.lock
 .nvmrc
