--- a/snap/packages/snap/snap.manifest.json
+++ b/snap/packages/snap/snap.manifest.json
@@ -1,13 +1,13 @@
 {
   "version": "0.1.0",
-  "description": "An example Snap written in TypeScript.",
-  "proposedName": "TypeScript Example",
+  "description": "A snap to manage a did:ethr identity, and store/use verifiable credentials",
+  "proposedName": "DID:ethr Credential Manager",
   "repository": {
     "type": "git",
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "lw0sXTX1EcWi4kOONYs1sBAfx6xdwHIGoGDNC7uJ0+A=",
+    "shasum": "SdvrXdm9AHuBcCSIS8x4tUBDiGUUYfvcKYEkHcD8gZY=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
