--- a/dmv-app/package.json
+++ b/dmv-app/package.json
@@ -12,6 +12,7 @@
     "@veramo/core": "^6.0.0",
     "@veramo/did-provider-ethr": "^6.0.0",
     "@veramo/did-resolver": "^6.0.0",
+    "dmv-app": "file:",
     "ethers": "^6.13.5",
     "next": "15.2.3",
     "react": "^19.0.0",
