--- a/issuer/backend/package.json
+++ b/issuer/backend/package.json
@@ -20,6 +20,7 @@
     "ethers": "^6.13.5",
     "ethr-did": "^3.0.25",
     "express": "^4.21.2",
+    "issuer": "file:",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
