--- a/presentation-creation/package.json
+++ b/presentation-creation/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "ethr-did": "^3.0.26",
+    "presentation-creation": "file:",
     "ts-node": "^10.9.2"
   }
 }
