--- a/register-did-ethr/package.json
+++ b/register-did-ethr/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "ethr-did": "^3.0.25",
+    "registry-test": "file:",
     "ts-node": "^10.9.2"
   }
 }
