--- a/wallet-setup/package.json
+++ b/wallet-setup/package.json
@@ -11,6 +11,7 @@
     "did-jwt": "^8.0.8",
     "ethers": "^6.13.5",
     "ethr-did-resolver": "^11.0.3",
+    "my-app": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
