--- a/snap/packages/snap/snap.manifest.json
+++ b/snap/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "kTyG+oHRAzcjnxYN1aONk6/6e9/S4bRXHVqguMxFebI=",
+    "shasum": "Psof/Epe52ritCqz3oZSW1/CETfnTT8Q6M/HgsQmIps=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -22,7 +22,8 @@
     "endowment:rpc": {
       "dapps": true,
       "snaps": false
-    }
+    },
+    "endowment:network-access": {}
   },
   "platformVersion": "6.14.0",
   "manifestVersion": "0.1"
