updated bank backend and connectivity. requires databse connection information in a .env file

--- a/bank-app/package.json
+++ b/bank-app/package.json
@@ -13,7 +13,9 @@
     "@veramo/did-provider-ethr": "^6.0.0",
     "@veramo/did-resolver": "^6.0.0",
     "bank-app": "file:",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
+    "mysql2": "^3.14.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
