--- a/dmv-app/package.json
+++ b/dmv-app/package.json
@@ -12,8 +12,12 @@
     "@veramo/core": "^6.0.0",
     "@veramo/did-provider-ethr": "^6.0.0",
     "@veramo/did-resolver": "^6.0.0",
+    "did-jwt-vc": "^4.0.7",
     "dmv-app": "file:",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
+    "ethr-did": "^3.0.26",
+    "express": "^5.1.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
