--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "did-education-toolkit",
+  "name": "did-toolkit",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "description": "Educational toolkit for teaching decentralized identity concepts",
   "workspaces": [
