--- a/holder/package.json
+++ b/holder/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@did-edu/holder",
   "version": "0.1.0",
+  "type": "module",
   "description": "DID credential holder agent with local key management",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,7 +12,7 @@
     "build": "tsc",
     "dev": "nodemon",
     "start": "node dist/server.js",
-    "cli": "ts-node src/cli.ts",
+    "cli": "tsx src/cli.ts",
     "clean": "rm -rf dist"
   },
   "dependencies": {
@@ -37,7 +38,7 @@
     "@types/express": "^4.17.0",
     "@types/node": "^20.0.0",
     "nodemon": "^3.0.0",
-    "ts-node": "^10.9.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.0.0"
   }
 }
