--- a/verifier/package.json
+++ b/verifier/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@did-edu/verifier",
   "version": "0.1.0",
+  "type": "module",
   "description": "DID credential verifier agent",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -27,7 +28,7 @@
     "@types/node": "^20.0.0",
     "@types/uuid": "^9.0.0",
     "nodemon": "^3.0.0",
-    "ts-node": "^10.9.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.0.0"
   }
 }
