--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "did-education-toolkit",
+  "name": "did-toolkit",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "description": "Educational toolkit for teaching decentralized identity concepts",
   "workspaces": [
@@ -20,10 +21,20 @@
     "dev:holder": "npm run dev -w holder",
     "dev:verifier": "npm run dev -w verifier",
     "dev:all": "concurrently \"npm run dev:issuer\" \"npm run dev:holder\" \"npm run dev:verifier\"",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:ps": "docker-compose ps",
+    "docker:restart": "docker-compose restart",
+    "docker:clean": "docker-compose down -v --rmi all",
+    "docker:rebuild": "docker-compose down && docker-compose build --no-cache && docker-compose up -d",
+    "docker": "docker-compose up --build",
     "test": "npm run test --workspaces --if-present",
     "test:unit": "npm run test:unit -w tests",
     "test:integration": "npm run test:integration -w tests",
     "test:e2e": "npm run test:e2e -w tests",
+    "test:docker": "docker-compose up -d && sleep 10 && ./demo-test.sh && docker-compose down",
     "lint": "eslint . --ext .ts,.tsx",
     "typecheck": "tsc --noEmit",
     "clean": "npm run clean --workspaces --if-present && rm -rf node_modules",
