--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "test:e2e": "npm run test:e2e -w tests",
     "test:docker": "docker-compose up -d && sleep 10 && ./demo-test.sh && docker-compose down",
     "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "typecheck": "tsc --noEmit",
-    "clean": "npm run clean --workspaces --if-present && rm -rf node_modules",
-    "start:demo": "./scripts/run-all.sh"
+    "clean": "npm run clean --workspaces --if-present && rm -rf node_modules"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -54,4 +54,3 @@
     "npm": ">=9.0.0"
   }
 }
-
