--- a/demo/holder-wallet/package.json
+++ b/demo/holder-wallet/package.json
@@ -14,8 +14,8 @@
     "axios": "^1.12.2",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.546.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
@@ -26,10 +26,17 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
+    "browserslist": "^4.24.4",
+    "caniuse-lite": "^1.0.30001690",
+    "enhanced-resolve": "^5.17.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "fraction.js": "^5.3.0",
     "globals": "^16.4.0",
+    "jiti": "^2.4.2",
+    "lightningcss": "^1.28.3",
+    "normalize-range": "^0.1.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15",
     "typescript": "~5.9.3",
