--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "build": "npm run build --workspaces --if-present",
     "build:common": "npm run build -w common",
     "dev": "npm run dev --workspaces --if-present",
-    "dev:issuer": "npm run dev -w issuer",
-    "dev:holder": "npm run dev -w holder",
-    "dev:verifier": "npm run dev -w verifier",
+    "dev:issuer": "npm -w issuer run dev",
+    "dev:issuer-web": "npm -w issuer-web run dev",
+    "dev:holder": "npm -w holder run dev",
+    "dev:verifier": "npm -w verifier run dev",
+    "dev:wallet": "npm -w holder-wallet run dev",
     "dev:all": "concurrently \"npm run dev:issuer\" \"npm run dev:holder\" \"npm run dev:verifier\"",
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
