--- a/demo/issuer-web/tsconfig.json
+++ b/demo/issuer-web/tsconfig.json
@@ -12,6 +12,7 @@
     "jsx": "react-jsx",
     "strict": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "types": ["vite/client"]
   },
