--- a/demo/verifier-web/tsconfig.json
+++ b/demo/verifier-web/tsconfig.json
@@ -10,8 +10,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "types": ["vite/client"]
   },
