--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "rootDir": "./",
     "composite": true
   },
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts", "demo/**", "tests/**"]
 }
 
