--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -171,6 +171,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Build common package
+        run: npm run build:common
+
       - name: Run linting
         run: npm run lint || true
         continue-on-error: true
