--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,6 +154,40 @@ jobs:
         run: |
           docker compose down -v
 
+  unit-tests:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build common package
+        run: npm run build:common
+
+      - name: Run issuer unit tests
+        run: |
+          cd issuer
+          npm run test:coverage
+        
+      - name: Upload coverage reports
+        uses: codecov/codecov-action@v4
+        if: always()
+        with:
+          files: ./issuer/coverage/lcov.info
+          flags: issuer
+          name: issuer-coverage
+        continue-on-error: true
+
   lint-and-typecheck:
     name: Lint & Type Check
     runs-on: ubuntu-latest
