--- a/issuer/package.json
+++ b/issuer/package.json
@@ -10,7 +10,11 @@
     "dev": "nodemon",
     "dev:build": "tsc && concurrently \"tsc --watch\" \"nodemon --watch dist dist/server.js\"",
     "start": "node dist/server.js",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "test:verbose": "NODE_OPTIONS=--experimental-vm-modules jest --verbose"
   },
   "dependencies": {
     "@did-edu/common": "^0.1.0",
@@ -21,12 +25,19 @@
     "did-resolver": "^4.1.0",
     "express": "^4.18.0",
     "dotenv": "^16.0.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
     "@types/cors": "^2.8.0",
     "@types/node": "^20.0.0",
+    "@types/uuid": "^9.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "supertest": "^6.3.0",
     "nodemon": "^3.0.0",
     "tsx": "^4.7.0",
     "typescript": "^5.0.0"
