--- a/verifier/package.json
+++ b/verifier/package.json
@@ -9,7 +9,11 @@
     "build": "tsc",
     "dev": "nodemon",
     "start": "node dist/server.js",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "test:verbose": "NODE_OPTIONS=--experimental-vm-modules jest --verbose"
   },
   "dependencies": {
     "@did-edu/common": "^0.1.0",
@@ -23,11 +27,17 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.0",
     "@types/express": "^4.17.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.0",
+    "supertest": "^6.3.0",
+    "ts-jest": "^29.1.0",
     "tsx": "^4.7.0",
     "typescript": "^5.0.0"
   }
