verifier test coverage and common coverage

--- a/common/package.json
+++ b/common/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@noble/curves": "^1.2.0",
